[tool.poetry]
name = "graphite_exporter"
version = "1.2.1"
description = "Prometheus Graphite Exporter"
authors = ["So1n <so1n897046026@gamil.com>"]
license = "Apache Software License"
readme = "./README.md"
repository = "https://github.com/so1n/graphite_exporter"
homepage = "https://github.com/so1n/graphite_exporter"

[tool.poetry.dependencies]
python = "^3.7"
APScheduler = "3.6.3"
prometheus-client = "0.7.1"
requests = "^2.25.1"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
# pytest = "^6.1.2"
# pytest-mock = "^3.5.1"
# coverage = "^5.4"
mypy = "^0.910"
isort = "^5.9.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "2.14.0"

[tool.black]
line-length = 120
target-version = ['py37']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.pytest]
testpaths = "tests"

[tool.coverage.run]
branch = true
source = ["graphite_exporter"]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # type hints
    "if TYPE_CHECKING:",
    "pass"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
